[gd_scene load_steps=3 format=3 uid="uid://c04sbd1cjqv8e"]

[ext_resource type="Script" path="res://Scenes/Colorpickerbutton/ColorButton.gd" id="1_bt100"]
[ext_resource type="Material" uid="uid://do1mxwei2hsi1" path="res://Assets/shaders/Checkers.tres" id="2_ef6f1"]

[node name="ColorButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1040.0
offset_bottom = -608.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bt100")
color = Color(0.0705882, 0.203922, 0.337255, 0.537255)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="transPanel" type="ColorRect" parent="."]
material = ExtResource("2_ef6f1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
mouse_filter = 2

[node name="ColorPanel" type="ColorRect" parent="transPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HexColor" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -13.0
offset_right = 35.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "#123456789"
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
